--- a/Seance1-Presentation_cours/Labo1/SOC8655_Lab1_Introduction_R_Nouveau.Rmd
+++ b/Seance1-Presentation_cours/Labo1/SOC8655_Lab1_Introduction_R_Nouveau.Rmd
@@ -253,6 +253,7 @@ print(resultat)
 resultat <- 7 - 2
 resultat
 
+
 ```
 
 > - Notez que si nous affectons une valeur différente au même nom d'objet, la valeur de l'objet sera modifiée. 
@@ -301,6 +302,7 @@ nom <- "Vissého"
 nom
 nom <- "Visseho Adjiwanou"
 nom
+
 
 ```
 
@@ -407,7 +409,10 @@ knitr::include_graphics("/Users/visseho/OneDrive - UQAM/Cours/Images_cours/Popul
 
 population <- c(2525779, 3026003, 3691173, 4449049, 5320817, 6127700, 6916183)
 
+
 population
+
+population[c(2,4)]
 
 ```
 
@@ -470,7 +475,7 @@ population[-2]
 
 
 ```{r, out.width='60%'}
-
+population
 pop_million <- population / 1000
 pop_million
 
@@ -510,8 +515,17 @@ annee <- c(1950, 1960, 1970, 1980, 1990, 2000, 2010)
 # pib en million de $
 pib <- c(5336101, 9424203, 16059180, 19367892, 24639012, 333725635, 74004249)
 
+appreciation <- c("a", "b", "c", "d", "e", "f", "g")
+
 Mat_an_pop <- cbind(annee, population, pib)
 Mat_an_pop
+
+Mat_an_pop1 <- cbind(annee, population, pib, appreciation)
+
+Mat_an_pop[2,3] + Mat_an_pop[3,3]
+
+Mat_an_pop1[2,3] + Mat_an_pop1[3,3]
+
 ```
 
 ## Matrices
@@ -525,6 +539,7 @@ Mat_an_pop
 ```{r}
 # Element d'une matrice
 Mat_an_pop[3, 2]
+Mat_an_pop[3, "population"]
 
 # Element d'une ligne
 Mat_an_pop[2, ]
@@ -541,7 +556,11 @@ Mat_an_pop[, "population"]
 # Objet hors de la matrice
 
 pop_totale_1 <- Mat_an_pop[1, "population"] + Mat_an_pop[2, "population"] + Mat_an_pop[3, "population"] + Mat_an_pop[4, "population"] + Mat_an_pop[5, "population"] + Mat_an_pop[6, "population"] + Mat_an_pop[7, "population"]
+
 pop_totale_1
+
+pop_totale_2 <- sum(Mat_an_pop[ , "population"])
+pop_totale_2
 
 ```
 
@@ -669,6 +688,7 @@ Les fichiers de données utilisés dans R sont accessibles de trois manières:
 
 ```{r, out.width='80%'}
 #getwd()
+
 #library(qss)
 
 # liste de tous les fichiers de données du package "qss"
@@ -683,6 +703,11 @@ data("UNpop", package = "qss")
 
 ```{r}
 head(UNpop)
+
+UNpop[3, "world.pop"]
+
+UNpop$world.pop[UNpop$year == "1970"]
+
 ```
 
 ## Fichier/base de données - Opération sur les fichiers de données
@@ -715,6 +740,7 @@ age1 <- rep(c(12, 25, 18), 4)
 age1
 age2 <- rep(c(12, 25, 18), each = 4)
 age2
+
 ```
 
 - Quelle est la différence?
@@ -827,6 +853,11 @@ Partenaires_com <- c("France", "USA")
 #montreal <- matrix(Candidats, Province, PopProvince, Partenaires_com, byrow = TRUE)
 
 montreal_list <- list(Candidats, Province, PopProvince, Partenaires_com)
+
+montreal_list[[1]][2]
+montreal_list[[2]][3]
+
+
 
 ```
 
